# codingtools

./: LICENSE  README.md
CMakeComponentBuild/: CMakeLists.txt  README.md
CMakeComponentBuild/bar/: bar.cc  bar.h
CMakeComponentBuild/baz/: baz.cc
CMakeComponentBuild/foo/: foo.cc  foo.h  sources.cmake
CMakeOutputs/: CMOProgram.cpp  CMOSharedLibrary.cpp  CMOSharedLibrary.h  CMOStaticLibrary.cpp  CMOStaticLibrary.h  CMakeLists.txt  README.md
CMakeUsageReqs/: CMakeLists.txt  README.md  test_cxx_features.cpp
CMakeUsageReqs/compiler_features/: CMakeLists.txt  test_cxx_features.cpp
CXX11Examples/: CMakeLists.txt  example01.cpp  test_cxx11.cpp  test_unique_ptr.cpp
CXX11Examples/TCXX/: Modulus.h
CheckCXX11Support/: CMakeLists.txt  README.md  example_header.hpp.in
CheckCXX11Support/CMake/CheckCXXStandardLibrary/: cxx11-test-stdlib.cpp
CheckCXX11Support/CMake/cmake-cxx11/Modules/: CheckCXX11Features.cmake
CheckCXX11Support/CMake/cmake-cxx11/Modules/CheckCXX11Features/: cxx11-test-algorithm_all_of.cpp  cxx11-test-algorithm_any_of.cpp  cxx11-test-algorithm_copy_n.cpp  cxx11-test-algorithm_find_if_not.cpp  cxx11-test-algorithm_is_partitioned.cpp  cxx11-test-algorithm_is_sorted.cpp  cxx11-test-algorithm_minmax.cpp  cxx11-test-algorithm_none_of.cpp  cxx11-test-algorithm_partition_point.cpp  cxx11-test-algorithm_shuffle.cpp  cxx11-test-array.cpp  cxx11-test-cmath_c99.cpp  cxx11-test-cmath_fpclassify.cpp  cxx11-test-constexpr.cpp  cxx11-test-cstddef_nullptr_t.cpp  cxx11-test-cstddef_nullptr_t_compile_fail.cpp  cxx11-test-default_template_arguments.cpp  cxx11-test-explicit_conversion_operators.cpp  cxx11-test-explicit_conversion_operators_compile_fail.cpp  cxx11-test-functional_bind.cpp  cxx11-test-functional_function.cpp  cxx11-test-functional_hash.cpp  cxx11-test-functional_mem_fn.cpp  cxx11-test-functional_ref.cpp  cxx11-test-functional_ref_compile_fail.cpp  cxx11-test-numeric_iota.cpp  cxx11-test-random.cpp  cxx11-test-range_based_for.cpp  cxx11-test-string_numeric_conversions.cpp  cxx11-test-string_numeric_conversions_fail.cpp  cxx11-test-system_error.cpp  cxx11-test-system_error_fail.cpp  cxx11-test-tuple.cpp  cxx11-test-type_traits.cpp  cxx11-test-utility_declval.cpp
CxxABITests/: CMakeLists.txt  README.md  demangle.cc  demangle.h  minicanvas.cc  minicanvas.h  smoketest.cc
FileID/: CMakeLists.txt  README.md  isroot.root  testLibMagic.cc
FileID/cmake/: FindLibMagic.cmake
FileID/magic/: supernemo
Logging/: CMakeLists.txt  README.md
NetworkX/: README.md
Networking/: CMakeLists.txt  README.md  check_network.cpp  check_network.hpp  testBoostAsio.cpp  testLibCurl.cpp  testNetworkConnection.cpp
ProtoBuf/: CMakeLists.txt  README.md  config.proto
ROOT6/: BinReloc.c.in  BinReloc.h.in  CMakeLists.txt  Dynamic.h  ExternalTypes.h  ExternalTypesLinkDef.h  Foo.cpp  Foo.hpp  MyConfig.hpp  Properties.h  RootSixLinkDef.h  Simple.cxx  Simple.hpp  SimpleLinkDef.h  SimpleRW.cxx  TypeWrapper.h  myconfig  myinterp.cc  myinterplogoff.C  myinterplogon.C  testDynamic.cpp
Reflection/: CMakeLists.txt  Config.hpp  HiddenUser.cpp  MyObserver.hpp  Person.cpp  Person.hpp  PersonPonder.hpp  README.md  basicPonder.cpp  hiddenPonder.cpp  ponderConfig.cpp  ponderPerson.cpp
Reflection/AutoStaticInit/: CMakeLists.txt  Hidden.cpp  Hidden.hpp  Plugin.cpp
SystemMetaData/: CMakeLists.txt  README.md  linux_program.cpp
